--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,5 @@ model2
 /inference/norm-flow/minibatch/fig/
 /inference/norm-flow/minibatch/artificial_mini_batch_loss.pdf
 /inference/norm-flow/minibatch/runs/
+
+ActiveTeachingCollaborative/inference/norm-flow/minibatch/lightning_logs/
